--- a/README
+++ b/README
@@ -1,1 +1,2 @@
-[![Build Status](https://travis-ci.org/bryan-acuna/Risk-Group-Project.svg?branch=master)](https://travis-ci.org/bryan-acuna/Risk-Group-Project)
+
+[![GitHub issues](https://img.shields.io/github/issues/MikeZBi/Risk-Group-Project.svg)](https://github.com/MikeZBi/Risk-Group-Project/issues)
