--- a/README
+++ b/README
@@ -1,2 +1,1 @@
-
-[![GitHub issues](https://img.shields.io/github/issues/MikeZBi/Risk-Group-Project.svg)](https://github.com/MikeZBi/Risk-Group-Project/issues)
+[![Build Status](https://travis-ci.org/bryan-acuna/Risk-Group-Project.svg?branch=master)](https://travis-ci.org/bryan-acuna/Risk-Group-Project)
