--- a/README
+++ b/README
@@ -1,1 +1,2 @@
 [![Build Status](https://travis-ci.org/bryan-acuna/Risk-Group-Project.svg?branch=master)](https://travis-ci.org/bryan-acuna/Risk-Group-Project)
+[![Build Status](https://travis-ci.org/bryan-acuna/Risk-Group-Project.svg?branch=master)](https://travis-ci.org/bryan-acuna/Risk-Group-Project)
